Fixed spacing for navigation bar

--- a/public/css/inner.css
+++ b/public/css/inner.css
@@ -382,7 +382,7 @@ ul.dropdown.dropdown-menu.topsignup {
 }
 
 header + div {
-    margin-top: 90px !important;
+    margin-top: 125px !important;
 }
 
 .custom-top-spacing {
